dev/network-policy.yaml
---
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-spring-boot-traffic
  namespace: argocd
spec:
  podSelector:
    matchLabels:
      role: express-api
  ingress:
  -  from:
     -  namespaceSelector:
          matchLabels:
            tier: expressBackend
        podSelector:
          matchLabels:
            role: express-api
